tests/errors/ref_misspelled_function.js
/*
Expected Error:
ReferenceError
*/
function calculateTotal() {
  return 42;
}
calculatTotal();
